--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@ h1{
 	font-size: 20px;
 
 }
-
 .about{
 	margin-left: 50px;
 }
@@ -46,13 +45,16 @@ h1{
 .experience{
 	margin-left: 50px;
 }
+.gallery{
+	margin-left: 50px;
+}
 .contact{
 	margin-left: 50px;
 }
 
 a{
 	text-decoration: none;
-	color: darkolivegreen;
+	color: deeppink;
 }
 
 .button{
@@ -67,7 +69,7 @@ a{
 
 }
 
-.btn:hover{
+.btn hover:{
 	background-color: lightpink;
 	border: 2px solid darkblue;
 	color:  darkred;
